Change property.extend to function. Makes more sense as a function than a getter because it is not technically chainable.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JSON schema validation with a chainable syntax.",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha"
+    "test": "./node_modules/.bin/mocha ./test/"
   },
   "repository": {
     "type": "git",
