--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "homepage": "https://github.com/nickclaw/vlad",
   "dependencies": {
     "bluebird": "^2.3.11",
-    "jsonschema": "^1.0.0",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "tv4": "^1.1.9"
   },
   "devDependencies": {
     "chai": "^1.10.0",
