--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "bluebird": "^2.3.11",
     "lodash": "^2.4.1",
-    "tv4": "^1.1.9"
+    "tv4": "^1.1.9",
+    "tv4-formats": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
