--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/nickclaw/vlad",
   "dependencies": {
     "bluebird": "^2.3.11",
+    "error-factory": "^0.1.4",
     "lodash": "^2.4.1",
     "tv4": "^1.1.9",
     "tv4-formats": "^1.0.0"
