--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "homepage": "https://github.com/nickclaw/vlad",
   "dependencies": {
     "bluebird": "^2.3.11",
-    "error-factory": "git://github.com/yanickrochon/error-factory#extending-custom-errors",
+    "error-factory": "^0.1.5",
     "tv4": "^1.1.9"
   },
   "devDependencies": {
