--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "chai": "^1.10.0",
     "chai-as-promised": "^4.1.1",
-    "mocha": "^2.0.1"
+    "mocha": "^2.0.1",
+    "require-new": "^1.1.0"
   }
 }
